--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 server.port=8081
+server.servlet.context-path=/fruits
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/sys_one
 spring.datasource.username=sys_token
 spring.datasource.password=sys_token
